       Mouse and keyboard rotation is around the x, y and z axes of the screen
   The routine for calculating the normal modes from a hessian has been moved to Calculator.py
   The vibanalysis tool now uses Symbols, Radii and Masses from PDGui
   The normal modes no longer have to be reordered as the creation of whole molecules does not reorder the atoms
   Changes to the way that Phonopy calculations are handled
       There is no longer any need for a qm_program as all the information will come from Phonopy
       A new command using Phonopy API, phonopy-pdielec-born.  
           The command reads a BORN file and writes out a file BORN_PDIELEC which has all atoms represented
           The new command uses only Phonopy modules, no PDielec modules
       All the Phonopy examples have been altered to use the new method
       The option for specifiying a qm_program has been removed
       Added 2 more test cases for primitive and standard cells
       Added more documentation to show how to use the Phonopy interface
version 8.2.0
   A -threads or --threads option has been added to pdgui.
   Added QT6 support by including the qtpy module
   Changed the use of scipy.interpolate.trapz to np.trapz
   Introduced a pyproject.toml file
   Added version number to the pyproject.toml file and modified the setup.py file accordingly
   Removed setup.cfg file.  setup.py no longer sets the version number.
   Updated the requirements.txt file using pipreq
   Updated the conda_installs.txt file
   Removed the need for the mkl package.  But this means the number of processors used for threading
        is set by the environment variables.  It is best to NOT use threading and have the number of
        processors set to the number of cores.  The number of threads used by each core should be 1.
        To force the BLAS routines to use threads it is best to use environment variables to control the 
        number of threads.  For example....
        export OMP_NUM_THREADS=1