@@ -322,6 +322,8 @@ A summary of the different examples and their purpose is shown below;
    +---------------------------+------------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
    | Vasp/Na2SO42              | Vasp             | Na2(SO4)2     | Maxwell-Garnett and Bruggeman, needle, plate and needle, using Vasp 5.3.5                                                                       |
    +---------------------------+------------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
+   | Vasp/Vasp6                | Vasp             | Na2(SO4)2     | The DFT calculation were performed using VASP 6.4.2, with thanks to Dr David Santos-Carballal for performing the DFT calculation                |
+   +---------------------------+------------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
    | Vasp/Urea                 | Vasp             | Urea          | Powder and single crystal exampl, using Vasp 5.4.4                                                                                              |
    +---------------------------+------------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
    | Vasp/ZnO                  | Vasp             | ZnO           | Maxwell-Garnett and Bruggeman, needle, plate and needle, mass fraction, using Vasp 5.3.5                                                        |
